fixed horizontal scroll

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -30,7 +30,7 @@
 
 @media (max-width: 400px) {
   .navbarToggle {
-    right: -6px;
+    right: 0.9rem;
   }
   
   .navList {
@@ -54,6 +54,15 @@
     padding: 5rem 0;
     h2 {
       padding-bottom: 2rem;
+    }
+    .skillsFlexContainer {
+      justify-content: center;
+      li {
+        margin: 0;
+      }
+      i {
+        font-size: 5rem;
+      }
     }
   }
 
