--- a/styles/sass/partials/_navigation.scss
+++ b/styles/sass/partials/_navigation.scss
@@ -34,10 +34,8 @@ button {
 
 .navbarToggle {
   position: fixed;
-  top: 1px;
-  right: 5px;
-  margin-top: 0.8rem;
-  margin-right: 1.5rem;
+  top: 0.9rem;
+  right: 1.5rem;
   background-image: none;
   background: transparent;
   border: none;
